--- a/lzgccz.html
+++ b/lzgccz.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-     <title>全国特种设备公示信息查询平台</title>
+     <title>A全国特种设备公示信息查询平台</title>
 <!-- jstree样式 -->
 <link rel="stylesheet" href="/info-pub/static/assets/lib/jsTree/style.min.css">
 <link rel="stylesheet" href="/info-pub/static/assets/lib/layui2.4.3/css/layui.css">
